add_executable(boost_io_chat chat.cpp)
add_executable(boost_io_chatmat chatmat.cpp)
add_executable(boost_io_pthread2 pthread2.cpp)
add_executable(boost_io_post2 post2.cpp)
add_executable(boost_io_post_dispatch post_dispatch.cpp)
add_executable(boost_io_posts posts.cpp)
add_executable(boost_io_posts_thread posts_thread.cpp)
target_link_libraries(boost_io_chat boost_system)
target_link_libraries(boost_io_chatmat boost_system)
target_link_libraries(boost_io_pthread2 boost_system pthread)
target_link_libraries(boost_io_post2 boost_system)
target_link_libraries(boost_io_post_dispatch boost_system)
target_link_libraries(boost_io_posts boost_system)
target_link_libraries(boost_io_posts_thread boost_system boost_thread)
