add_executable(small_hello hello.cpp)
add_executable(small_boost_timer boost_timer.cpp)
add_executable(small_accepter accepter.cpp)
add_executable(small_accepter_async accepter_async.cpp)
add_executable(small_accepter_timeout accepter_timeout.cpp)
add_executable(small_boostversion boostversion.cpp)
add_executable(small_chronotest chronotest.cpp)
add_executable(small_connecter connecter.cpp)
add_executable(small_connecter_async connecter_async.cpp)
add_executable(small_connecter_send connecter_send.cpp)
add_executable(small_createmessage createmessage.cpp)
add_executable(small_message message.cpp)
add_executable(small_randamor randamor.cpp)
add_executable(small_randamor2 randamor2.cpp)
add_executable(small_speedmove speedmove.cpp)
add_executable(small_uniqid uniqid.cpp)
target_link_libraries(small_hello)
target_link_libraries(small_boost_timer boost_system)
target_link_libraries(small_accepter boost_system)
target_link_libraries(small_accepter_async boost_system)
target_link_libraries(small_accepter_timeout boost_system)
target_link_libraries(small_boostversion boost_system)
target_link_libraries(small_chronotest)
target_link_libraries(small_connecter boost_system)
target_link_libraries(small_connecter_async boost_system)
target_link_libraries(small_connecter_send boost_system)
target_link_libraries(small_createmessage)
target_link_libraries(small_message)
target_link_libraries(small_randamor)
target_link_libraries(small_randamor2)
target_link_libraries(small_speedmove)
target_link_libraries(small_uniqid)

